# open-monitoring

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: build.yaml
argocd/: status-app.yaml
backend/: Dockerfile  app.py  probes.yaml  pyproject.toml
blackbox/: blackbox.yml
html/: app.js  index.html
k8s/app/: configmap-probes.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  service.yaml
k8s/app/html/: i18n.js  styles.css
prometheus/: prometheus.yml
