[project]
name = "open-monitoring-backend"
version = "1.0.0"
description = "FastAPI async backend that filters Prometheus metrics for the public status page"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "Jerb" },
]
keywords = ["prometheus", "fastapi", "status-page", "monitoring"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",
    "httpx==0.28.1",
    "pyyaml==6.0.3",
    "uvloop==0.22.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.19",
    "basedpyright==1.39.8",
    "uv==0.11.24",
]

[project.urls]
Homepage = "https://github.com/jerbao/open-monitoring"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
